<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/modul_nama"
            android:layout_marginHorizontal="20dp"
            android:id="@+id/btn_start_name"
            android:backgroundTint="#3aa8c1">
        </Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/modul_kalkulator"
            android:layout_marginHorizontal="20dp"
            android:id="@+id/btn_start_kalkulator"
            android:backgroundTint="#3aa8c1">
        </Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/modul_ListView"
            android:layout_marginHorizontal="20dp"
            android:id="@+id/btn_start_listview"
            android:backgroundTint="#3aa8c1">
        </Button>

    </LinearLayout>

</FrameLayout>